Add 'Gc(Garbage Collection).md'